terraform/modules/fission/files/router-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fission-router-ingress
  namespace: ${fission_namespace}
spec:
  ingressClassName: traefik
  rules:
  - host: ${fission_domain}
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: router
            port:
              number: 80
